# frisbii_transform_mcp.server

./: OAUTH2_SETUP.md  README.md  copilot-instructions.md  pyproject.toml
frisbii_transform_mcp/: server.py
